2005-02-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, config/sample-headers/libpq/7.4/config-internal-libpq.h,
 config/sample-headers/libpq/8.0/config-public-libpq.h,
 include/pqxx/Makefile.am, include/pqxx/util.hxx, test/test002.cxx:
  - Made PQXX_HAVE_PQFTABLE an internal config item
  - Removed config-public-libpq.h
  - Trying to use unavailable PQftable() now gives link error
2005-02-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test058.cxx:
  - Work around another Visual C++ bug, thanks Christian Nettesheim
2005-02-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Replaced problematic halfconnect() by full activate()
  - Included missing pqxx/libcompiler.h
  - Introduced nonnoticer, disable_noticer
 include/pqxx/connection.hxx, include/pqxx/dbtransaction.hxx,
 include/pqxx/except.hxx, include/pqxx/isolation.hxx,
 include/pqxx/nontransaction.hxx, include/pqxx/result.hxx,
 include/pqxx/robusttransaction.hxx, include/pqxx/tablereader.hxx,
 include/pqxx/tablewriter.hxx, include/pqxx/transaction_base.hxx,
 include/pqxx/transaction.hxx, include/pqxx/transactor.hxx,
 include/pqxx/trigger.hxx:
  - Included missing pqxx/libcompiler.h (just in case)
 include/pqxx/libcompiler.h:
  - New Visual C++ workaround macro PQXX_QUIET_DESTRUCTORS
 include/pqxx/robusttransaction.hxx, include/pqxx/transaction.hxx,
 include/pqxx/trigger.hxx, src/connection_base.cxx, src/largeobject.cxx,
 src/pipeline.cxx, src/tablereader.cxx, src/tablewriter.cxx,
 src/transaction_base.cxx:
  - Silence message noticer during destructors in Visual C++
2005-02-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed Debian autobuild, thanks Roger Leigh
 include/pqxx/compiler.h:
  - Moved PQXX_LIBEXPORT definition up a little, just to be sure
 include/pqxx/util.hxx:
  - Added PQXX_LIBEXPORT to non-inline symbols, thanks Christian Nettesheim!
 src/dbtransaction.cxx:
  - Included missing pqxx/compiler.h